fix(docs): prerendering issues

--- a/docs/content/docs/7.studio/5.config.md
+++ b/docs/content/docs/7.studio/5.config.md
@@ -142,7 +142,7 @@ export default defineNuxtSchema({
 ```
 ::
 
-::tip{to="/docs/advanced/debug"}
+::tip{to="/docs/studio/debug"}
 Take a look at this section to validate your schema in local development.
 ::
 
