--- a/docs/content/docs/7.studio/1.setup.md
+++ b/docs/content/docs/7.studio/1.setup.md
@@ -29,7 +29,7 @@ Google authentication is adapted for non technical users. Google users have to j
 Once you are logged in the admin, you have the possibility to import your Nuxt Content repository from the interface.
 
 ::tip
-Two options are available, you can either import an existing repository or use one of our [templates](/studio/templates).
+Two options are available, you can either import an existing repository or use one of our [templates](https://nuxt.studio/templates).
 ::
 
 The only requirement is to host your repository on GitHub. From the interface, connect to our [GitHub app](/docs/studio/github), you'll be then able to link a GitHub repository to your Studio project.
