docs: update query builder docs

--- a/docs/content/docs/3.utils/1.query-collection.md
+++ b/docs/content/docs/3.utils/1.query-collection.md
@@ -26,8 +26,15 @@ const { data: page } = await useAsyncData(route.path, () => {
 
 ```ts
 function queryCollection<T extends keyof Collections>(collection: T): CollectionQueryBuilder<Collections[T]>
-```
 
+interface CollectionQueryBuilder<T> {
+  where(field: keyof T | string, operator: SQLOperator, value?: unknown): CollectionQueryBuilder<T>
+  andWhere(groupFactory: QueryGroupFunction<T>): CollectionQueryBuilder<T>
+  orWhere(groupFactory: QueryGroupFunction<T>): CollectionQueryBuilder<T>
+  order(field: keyof T, direction: 'ASC' | 'DESC'): CollectionQueryBuilder<T>
+  // ... other methods
+}
+```
 
 ### `queryCollection(collection: CollectionName)`
 
@@ -66,6 +73,73 @@ const { data } = await useAsyncData(route.path, () => {
 })
 ```
 
+### `where(field: keyof Collection | string, operator: SqlOperator, value?: unknown)`
+
+Add a condition to the query to filter results based on a specific field.
+
+- Parameters:
+  - `field`: The field to filter on
+  - `operator`: The SQL operator to use for comparison. Possible values include:
+    - `'='`: Equal to
+    - `'>'`: Greater than
+    - `'<'`: Less than
+    - `'<>'`: Not equal to
+    - `'in'`: In a list of values
+    - `'BETWEEN'`: Between two values
+    - `'NOT BETWEEN'`: Not between two values
+    - `'IS NULL'`: Is null
+    - `'IS NOT NULL'`: Is not null
+    - `'LIKE'`: Matches a pattern
+    - `'NOT LIKE'`: Does not match a pattern
+  - `value`: The value to compare against. The type depends on the operator used.
+
+```ts
+const route = useRoute()
+const { data } = await useAsyncData(route.path, () => {
+  return queryCollection('docs')
+    .where('date', '<', '2024-04-04')
+    .all()
+})
+```
+
+### `andWhere(groupFactory: QueryGroupFunction<Collection>)`
+
+Add an AND condition group to the query. This allows for more complex query conditions.
+
+- Parameter:
+  - `groupFactory`: A function that receives a query builder and can add multiple conditions that will be grouped together with AND
+
+```ts
+const { data } = await useAsyncData('recent-docs', () => {
+  return queryCollection('docs')
+    .where('published', '=', true)
+    .andWhere(query => {
+      query.where('date', '>', '2024-01-01')
+          .where('category', '=', 'news')
+    })
+    .all()
+})
+```
+
+### `orWhere(groupFactory: QueryGroupFunction<Collection>)`
+
+Add an OR condition group to the query. This allows for alternative conditions.
+
+- Parameter:
+  - `groupFactory`: A function that receives a query builder and can add multiple conditions that will be grouped together with OR
+
+```ts
+const { data } = await useAsyncData('featured-docs', () => {
+  return queryCollection('docs')
+    .where('published', '=', true)
+    .orWhere(query => {
+      query.where('featured', '=', true)
+          .where('priority', '>', 5)
+    })
+    .all()
+})
+```
+
 ### `order(field: keyof Collection, direction: 'ASC' | DESC)`
 
 Order the query results based on a specific field.
@@ -101,8 +175,6 @@ const { data } = await useAsyncData(route.path, () => {
 
 ### `skip(skip: number)`
 
-### `skip(skip: number)`
-
 Skip a specified number of results in the query.
 
 - Parameter:
@@ -118,37 +190,7 @@ const { data } = await useAsyncData(route.path, () => {
 })
 ```
 
-### `where(field: keyof Collection, operator: SqlOperator, value?: unkown)`
-
-Add a condition to the query to filter results based on a specific field.
-
-- Parameters:
-  - `field`: The field to filter on.
-  - `operator`: The SQL operator to use for comparison. Possible values include:
-    - `'='`: Equal to
-    - `'>'`: Greater than
-    - `'<'`: Less than
-    - `'<>'`: Not equal to
-    - `'in'`: In a list of values
-    - `'BETWEEN'`: Between two values
-    - `'NOT BETWEEN'`: Not between two values
-    - `'IS NULL'`: Is null
-    - `'IS NOT NULL'`: Is not null
-    - `'LIKE'`: Matches a pattern
-    - `'NOT LIKE'`: Does not match a pattern
-  - `value`: The value to compare against. The type depends on the operator used.
-
-```ts
-const route = useRoute()
-const { data } = await useAsyncData(route.path, () => {
-  return queryCollection('docs')
-    .where('date', '<', '2024-04-04')
-    .all()
-})
-```
-
 ### `all()`
-
 
 Execute the query and return all matching results.
 
@@ -161,9 +203,7 @@ const { data } = await useAsyncData(route.path, () => {
 })
 ```
 
-
 ### `first()`
-
 
 Execute the query and return the first matching result.
 
