docs: apply studio parsing

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -1,6 +1,6 @@
 ---
 title: Installation
-description: 'Get started with Nuxt Content v3 in your Nuxt application.'
+description: Get started with Nuxt Content v3 in your Nuxt application.
 ---
 
 ### Install the Package
@@ -8,7 +8,6 @@ description: 'Get started with Nuxt Content v3 in your Nuxt application.'
 Choose your preferred package manager to install Nuxt Content v3:
 
 ::code-group
-
 ```bash [pnpm]
 pnpm add @nuxt/content@next
 ```
@@ -24,7 +23,6 @@ npm install @nuxt/content@next
 ```bash [bun]
 bun add @nuxt/content@next
 ```
-
 ::
 
 ### Register the Module
@@ -97,4 +95,3 @@ useSeoMeta({
 ::tip{icon="i-lucide-rocket"}
 That's it! You've now created your first Nuxt Content page.
 ::
-
