--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -21,8 +21,7 @@ Nuxt Content read and parse all the available contents at built time. This optio
 
 Configure markdown parser.
 
-#### `toc` 
-
+#### `toc`
 
 ::code-group
 ```ts [Default]
@@ -31,6 +30,7 @@ toc: {
   searchDepth: 2
 }
 ```
+
 ```ts [Signature]
 type Toc = {
   depth: number
@@ -42,6 +42,7 @@ type Toc = {
 Control behavior of Table of Contents generation.
 
 Value:
+
 - `depth`: Maximum heading depth to include in the table of contents.
 - `searchDepth`: Maximum depth of nested tags to search for heading.
 
@@ -65,6 +66,7 @@ export default defineNuxtConfig({
 ```ts [Default]
 remarkPlugins: {}
 ```
+
 ```ts [Signature]
 type RemarkPlugins = Record<string, false | MarkdownPlugin>
 ```
@@ -102,6 +104,7 @@ export default defineNuxtConfig({
 ```ts [Default]
 rehypePlugins: {}
 ```
+
 ```ts [Signature]
 type RehypePlugins = object
 ```
@@ -132,6 +135,7 @@ export default defineNuxtConfig({
 ```ts [Default]
 highlight: false
 ```
+
 ```ts [Signature]
 type Highlight = false | object
 ```
@@ -139,10 +143,11 @@ type Highlight = false | object
 
 Nuxt Content uses [Shiki](https://github.com/shikijs/shiki) to provide syntax highlighting for [`ProsePre`](/docs/components/prose#prosepre) and [`ProseCode`](/docs/components/prose#prosecode).
 
-| Option    |                     Type                     | Description                                                                                                         |
-| --------- | :------------------------------------------: | :------------------------------------------------------------------------------------------------------------------ |
-| `theme`   | `ShikiTheme` or `Record<string, ShikiTheme>` | The [color theme](https://github.com/shikijs/shiki/blob/main/docs/themes.md) to use.                                |
-| `langs` |                `ShikiLang[]`                 | The [loaded languages](https://github.com/shikijs/shiki/blob/main/docs/languages.md) available for highlighting. |
+|         |                                              |                                                                                                                  |
+| ------- | -------------------------------------------- | ---------------------------------------------------------------------------------------------------------------- |
+| Option  | Type                                         | Description                                                                                                      |
+| `theme` | `ShikiTheme` or `Record<string, ShikiTheme>` | The [color theme](https://github.com/shikijs/shiki/blob/main/docs/themes.md) to use.                             |
+| `langs` | `ShikiLang[]`                                | The [loaded languages](https://github.com/shikijs/shiki/blob/main/docs/languages.md) available for highlighting. |
 
 - `highlight.theme`
 
@@ -291,7 +296,7 @@ export default defineNuxtConfig({
 
 ### `LibSQL`
 
-If you plan to deploy your application using LibSQL database you need to use `libsql` database adapter. 
+If you plan to deploy your application using LibSQL database you need to use `libsql` database adapter.
 
 First, make sure to install the `@libsql/client` package:
 
@@ -327,24 +332,25 @@ Configure content renderer.
 ```ts [Default]
 { h2: true, h3: true, h4: true }
 ```
+
 ```ts [Signature]
 type AnchorLinks = boolean | Record<'h1' | 'h2' | 'h3' | 'h4' | 'h5' | 'h6', boolean>
 ```
 ::
 
-
 Control anchor link generation, by default it generates anchor links for `h2`, `h3` and `h4` heading
 
 Value:
+
 - `false`: will disable link generation.
 - `true`: will enable link generation for all headings.
 - `object`: will customize the link generation.
-  - `h1: boolean`{lang=ts}: Whether render anchor link for `H1` tags or not.
-  - `h2: boolean`{lang=ts}: Whether render anchor link for `H2` tags or not.
-  - `h3: boolean`{lang=ts}: Whether render anchor link for `H3` tags or not.
-  - `h4: boolean`{lang=ts}: Whether render anchor link for `H4` tags or not.
-  - `h5: boolean`{lang=ts}: Whether render anchor link for `H5` tags or not.
-  - `h6: boolean`{lang=ts}: Whether render anchor link for `H6` tags or not.
+  - `h1: boolean`: Whether render anchor link for `H1` tags or not.
+  - `h2: boolean`: Whether render anchor link for `H2` tags or not.
+  - `h3: boolean`: Whether render anchor link for `H3` tags or not.
+  - `h4: boolean`: Whether render anchor link for `H4` tags or not.
+  - `h5: boolean`: Whether render anchor link for `H5` tags or not.
+  - `h6: boolean`: Whether render anchor link for `H6` tags or not.
 
 ### `alias`
 
@@ -352,6 +358,7 @@ Value:
 ```ts [Default]
 alias: {}
 ```
+
 ```ts [Signature]
 type Alias = Record<string, string>
 ```
@@ -383,9 +390,10 @@ watch: {
 Configure content hot reload in development.
 
 Value:
-- `enabled`{lang=ts}: Enable/Disable hot reload.
-- `port`{lang=ts}: Select the port used for the WebSocket server.
-- `showURL`{lang=ts}: Toggle URL display in dev server boot message.
+
+- `enabled`: Enable/Disable hot reload.
+- `port`: Select the port used for the WebSocket server.
+- `showURL`: Toggle URL display in dev server boot message.
 
 ::callout
 The watcher is a development feature and will not be included in production.
