--- a/docs/content/docs/2.collections/1.collections.md
+++ b/docs/content/docs/2.collections/1.collections.md
@@ -2,17 +2,16 @@
 title: Define Content Collections
 navigation:
   title: Define
-description: 'Learn how to define and configure content collections in your Nuxt application.'
+description: Learn how to define and configure content collections in your Nuxt application.
 ---
 
-The Nuxt Content module automatically parses any content files within the `content/` directory located at the root of your Nuxt application. This setup allows you to freely structure the folder to suit your project's needs. 
+The Nuxt Content module automatically parses any content files within the `content/` directory located at the root of your Nuxt application. This setup allows you to freely structure the folder to suit your project's needs.
 
 For better organization, consider using Content Collections, which let you categorize and manage content more effectively. These collections are defined in a `content.config.ts` file.
 
 ::warning
 If no `content.config.ts` file is present, all files within the content folder are parsed and imported by default. However, once a config file is added, only files matching the specified path patterns defined in collections will be imported.
 ::
-
 
 ## What are Content Collections?
 
