--- a/docs/content/docs/2.collections/3.sources.md
+++ b/docs/content/docs/2.collections/3.sources.md
@@ -23,6 +23,7 @@ export const collections = {
 The `source` property can be defined as either a string (following a glob pattern) or an object, allowing more detailed source configuration for your target directory and files within the content folder.
 
 **Example:**
+
 - `source: '**` includes all files within the content directory and its subdirectories.
 - `source: '**/*.md'`includes all `Markdown` files within the content directory and its subdirectories.
 - `source: 'docs/**/*.yml'` includes all `YML` files within the `content/docs` and its subdirectories.
@@ -41,7 +42,7 @@ Glob patterns to exclude content from the import.
 
 This configuration only applied for **page** type with 1-to-1 relationship between content files and pages on your site.
 
-It represents the path prefix (base URL) of the corresponding page on the website. 
+It represents the path prefix (base URL) of the corresponding page on the website.
 
 ### `cwd`
 
@@ -49,7 +50,7 @@ Root directory for content matching.
 
 ### `repository`
 
-External source representing a remote git repository URL (e.g., https://github.com/nuxt/content)
+External source representing a remote git repository URL (e.g., <https://github.com/nuxt/content>)
 
 ### `authToken`
 
