--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -1,6 +1,7 @@
 ---
 title: Markdown
-description: "Create and query Markdown files in your Nuxt applications and use the MDC syntax to integrate Vue components."
+description: Create and query Markdown files in your Nuxt applications and use
+  the MDC syntax to integrate Vue components.
 ---
 
 ## Usage
@@ -37,7 +38,6 @@ date: 2020-11-11
 
 This is Foo blog post.
 ```
-
 
 ```md [bar.md]
 ---
@@ -114,17 +114,22 @@ console.log(home.body)
 
 ### Native parameters
 
-| Key                                         |   Type    | Default                               | Description                                                                                              |
-| ------------------------------------------- | :-------: | ------------------------------------- | -------------------------------------------------------------------------------------------------------- |
-| `title`                                     | `string`  | First `<h1>`{lang="html"} of the page | Title of the page, will also be injected in metas                                                        |
-| `description`                               | `string`  | First `<p>`{lang="html"} of the page  | Description of the page, will be shown below the title and injected into the metas                       |
-| `navigation`                                | `boolean` | `true`                                | Define if the page is included in [`queryCollectionNavigation`](/docs/utils/query-collection-navigation) return value. |
+|               |           |                          |                                                                                                                        |
+| ------------- | --------- | ------------------------ | ---------------------------------------------------------------------------------------------------------------------- |
+| Key           | Type      | Default                  | Description                                                                                                            |
+| `title`       | `string`  | First `<h1>` of the page | Title of the page, will also be injected in metas                                                                      |
+| `description` | `string`  | First `<p>` of the page  | Description of the page, will be shown below the title and injected into the metas                                     |
+| `navigation`  | `boolean` | `true`                   | Define if the page is included in [`queryCollectionNavigation`](/docs/utils/query-collection-navigation) return value. |
 
 ## MDC Syntax
 
 We created the MDC syntax to supercharge Markdown and give you the ability to integrate Vue components with slots and props inside your Markdown.
 
-::callout{icon="i-simple-icons-visualstudiocode" to="https://marketplace.visualstudio.com/items?itemName=Nuxt.mdc"}
+::callout
+---
+icon: i-simple-icons-visualstudiocode
+to: https://marketplace.visualstudio.com/items?itemName=Nuxt.mdc
+---
 Install the **MDC VS Code extension** to get proper syntax highlighting for the MDC syntax.
 ::
 
@@ -153,29 +158,29 @@ The component must contain either:
 - A `<slot />` to accept raw text or another component.
 - The [`<MDCSlot />`](/docs/components/mdc-slot) component to accept formatted text.
 
-In a markdown file, use the component with the **`::`** identifier.
+In a markdown file, use the component with the `::` identifier.
 
 ::code-group
-  ```mdc [index.md]
-  ::card
-  The content of the card
-  ::
-  ```
+```mdc [index.md]
+::card
+The content of the card
+::
+```
 
-  ```html [Card.vue]
-  <!-- components/content/Card.vue -->
-  <template>
-    <div class="p-2 border bg-white dark:bg-black dark:border-gray-700 rounded">
-      <slot />
-    </div>
-  </template>
-  ```
+```html [Card.vue]
+<!-- components/content/Card.vue -->
+<template>
+  <div class="p-2 border bg-white dark:bg-black dark:border-gray-700 rounded">
+    <slot />
+  </div>
+</template>
+```
 
-  ::preview-card{label="Preview" icon="i-lucide-eye"}
-    ::example-card
+  :::preview-card{icon="i-lucide-eye" label="Preview"}
+    ::::example-card
     The content of the card
-    ::
-  ::
+    ::::
+  :::
 ::
 
 ### Slots
@@ -186,34 +191,34 @@ A component's slots can accept content or another components.
 - **Named slots** use the `#` identifier to render the corresponding content.
 
 ::code-group
-  ```mdc [index.md]
-  ::hero
-  My Page Title
+```mdc [index.md]
+::hero
+My Page Title
 
-  #description
-  This will be rendered inside the `description` slot.
-  ::
-  ```
+#description
+This will be rendered inside the `description` slot.
+::
+```
 
-  ```html [Hero.vue]
-  <template>
-    <section>
-      <h1 class="text-4xl">
-        <MDCSlot unwrap="p" />
-      </h1>
-      <slot name="description" />
-    </section>
-  </template>
-  ```
+```html [Hero.vue]
+<template>
+  <section>
+    <h1 class="text-4xl">
+      <MDCSlot unwrap="p" />
+    </h1>
+    <slot name="description" />
+  </section>
+</template>
+```
 
-  ::preview-card{label="Preview" icon="i-lucide-eye"}
-    ::example-hero
+  :::preview-card{icon="i-lucide-eye" label="Preview"}
+    ::::example-hero
     My Page Title
-
+    
     #description
     This will be rendered inside the `description` slot.
-    ::
-  ::
+    ::::
+  :::
 ::
 
 ::note
@@ -223,12 +228,13 @@ Read more about the [`<MDCSlot />`](/docs/components/mdc-slot) component.
 ::tip
 You can use Markdown inside your components slots:
 
-::code-group
+  :::code-group
   ```mdc [index.md]
   ::the-title
   A [rich text](/) will be **rendered** by the component.
   ::
   ```
+  
   ```html [MyTitle.vue]
   <template>
     <h1 class="text-4xl">
@@ -236,14 +242,13 @@ You can use Markdown inside your components slots:
     </h1>
   </template>
   ```
-
-  ::preview-card{label="Preview" icon="i-lucide-eye"}
-    ::example-title
-    A [rich text](/) will be **rendered** by the component.
-    ::
-  ::
-
-::
+  
+    ::::preview-card{icon="i-lucide-eye" label="Preview"}
+      :::::example-title
+      A [rich text](/) will be **rendered** by the component.
+      :::::
+    ::::
+  :::
 ::
 
 ### Props
@@ -255,29 +260,29 @@ There are two ways to pass props to components using MDC.
 The `{}` identifier passes props to components in a terse way by using a `key=value` syntax.
 
 ::code-group
-  ```mdc [index.md]
-  ::alert{type="warning"}
-  The **alert** component.
-  ::
-  ```
+```mdc [index.md]
+::alert{type="warning"}
+The **alert** component.
+::
+```
 
-  ```vue [Alert.vue]
-  <script setup>
-  defineProps(['type'])
-  </script>
+```vue [Alert.vue]
+<script setup>
+defineProps(['type'])
+</script>
 
-  <template>
-    <div :class="[type]">
-      <MDCSlot :use="$slots.default" unwrap="p" />
-    </div>
-  </template>
-  ```
+<template>
+  <div :class="[type]">
+    <MDCSlot :use="$slots.default" unwrap="p" />
+  </div>
+</template>
+```
 
-  ::preview-card{label="Preview" icon="i-lucide-eye"}
-    ::example-alert{type="warning"}
+  :::preview-card{icon="i-lucide-eye" label="Preview"}
+    ::::example-alert{type="warning"}
     The **alert** component.
-    ::
-  ::
+    ::::
+  :::
 ::
 
 Multiple props can be separated with a space:
@@ -300,8 +305,7 @@ Your warning
 ::
 ```
 
-If you want to pass arrays or objects as props to components you can pass them as JSON string and prefix the prop key with a colon to automatically decode the JSON string.
-Note that in this case you should use single quotes for the value string so you can use double quotes to pass a valid JSON string:
+If you want to pass arrays or objects as props to components you can pass them as JSON string and prefix the prop key with a colon to automatically decode the JSON string. Note that in this case you should use single quotes for the value string so you can use double quotes to pass a valid JSON string:
 
 ::code-group
 ```mdc [array.md]
@@ -325,54 +329,54 @@ Note that in this case you should use single quotes for the value string so you 
 The YAML method uses the `---` identifier to declare one prop per line, that can be useful for readability.
 
 ::code-group
-  ```mdc [index.md]
-  ::icon-card
-  ---
-  icon: IconNuxt
-  description: Harness the full power of Nuxt and the Nuxt ecosystem.
-  title: Nuxt Architecture.
-  ---
-  ::
-  ```
+```mdc [index.md]
+::icon-card
+---
+icon: IconNuxt
+description: Harness the full power of Nuxt and the Nuxt ecosystem.
+title: Nuxt Architecture.
+---
+::
+```
 
-  ```html [IconCard.vue]
-  <script setup>
-  defineProps({
-    title: {
-      type: String,
-      default: 'Default title'
-    },
-    description: {
-      type: String,
-      default: 'Default description'
-    },
-    icon: {
-      type: String,
-      default: 'IconMarkdown'
-    }
-  })
-  </script>
+```html [IconCard.vue]
+<script setup>
+defineProps({
+  title: {
+    type: String,
+    default: 'Default title'
+  },
+  description: {
+    type: String,
+    default: 'Default description'
+  },
+  icon: {
+    type: String,
+    default: 'IconMarkdown'
+  }
+})
+</script>
 
-  <template>
-    <div class="p-6 border bg-white dark:bg-black dark:border-gray-700 rounded">
-      <component :is="icon" class="w-20 h-20" />
-      <h2 class="text-3xl font-semibold mb-2">
-        {{ title }}
-      </h2>
-      <p>{{ description }}</p>
-    </div>
-  </template>
-  ```
+<template>
+  <div class="p-6 border bg-white dark:bg-black dark:border-gray-700 rounded">
+    <component :is="icon" class="w-20 h-20" />
+    <h2 class="text-3xl font-semibold mb-2">
+      {{ title }}
+    </h2>
+    <p>{{ description }}</p>
+  </div>
+</template>
+```
 
-  ::preview-card{label="Preview" icon="i-lucide-eye"}
-    ::example-icon-card
+  :::preview-card{icon="i-lucide-eye" label="Preview"}
+    ::::example-icon-card
     ---
-    icon: IconNuxt
     description: Harness the full power of Nuxt and the Nuxt ecosystem.
+    icon: IconNuxt
     title: Nuxt Architecture.
     ---
-    ::
-  ::
+    ::::
+  :::
 ::
 
 ### Attributes
@@ -382,33 +386,33 @@ Attributes are useful for highlighting and modifying part of paragraph. The synt
 Possible values ​​are all named attributes, classes with the notation `.class-name` and an ID with `#id-name`.
 
 ::code-group
-  ```mdc [index.md]
-  Hello [World]{style="color: green;" .custom-class #custom-id}!
-  ```
+```mdc [index.md]
+Hello [World]{style="color: green;" .custom-class #custom-id}!
+```
 
-  ::preview-card{label="Preview" icon="i-lucide-eye"}
-  Hello [World]{style="color: green;" .custom-class #custom-id}!
-  ::
+  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  Hello [World]{#custom-id .custom-class style="color: green;"} !
+  :::
 ::
 
-In addition to mdc components and `span`, attribute syntax will work on images, links, inline `code`, **bold** and _italic_ text.
+In addition to mdc components and `span`, attribute syntax will work on images, links, inline `code`, **bold*&#x2A; and &#x5F;italic_ text.
 
 ::code-group
-  ```md [index.md]
+```md [index.md]
+Attributes work on:
+
+- ![](/favicon.ico){style="display: inline; margin: 0;"} image,
+- [link](#attributes){style="background-color: pink;"}, `code`{style="color: cyan;"},
+- _italic_{style="background-color: yellow; color:black;"} and **bold**{style="background-color: lightgreen;"} texts.
+```
+
+  :::preview-card{prose label="Preview"}
   Attributes work on:
-
+  
   - ![](/favicon.ico){style="display: inline; margin: 0;"} image,
-  - [link](#attributes){style="background-color: pink;"}, `code`{style="color: cyan;"},
-  - _italic_{style="background-color: yellow; color:black;"} and **bold**{style="background-color: lightgreen;"} texts.
-  ```
-
-  ::preview-card{label="Preview" prose}
-  Attributes work on:
-
-  - ![](/favicon.ico){style="display: inline; margin: 0;"} image,
-  - [link](#attributes){style="background-color: pink;"}, `code`{style="color: cyan;"},
-  - _italic_{style="background-color: yellow; color: black;"} and **bold**{style="background-color: lightgreen;"} texts.
-  ::
+  - [link](#attributes){style="background-color: pink;"}, `code`,
+  - _italic_ and **bold** texts.
+  :::
 ::
 
 ## Binding Data in Markdown
