--- a/docs/content/docs/3.files/2.yaml.md
+++ b/docs/content/docs/3.files/2.yaml.md
@@ -1,6 +1,6 @@
 ---
 title: YAML
-description: 'How to define, write and query YAML data.'
+description: How to define, write and query YAML data.
 ---
 
 ## Define Collection
@@ -30,7 +30,6 @@ name: Ahad Birang
 avatar: https://avatars.githubusercontent.com/u/2047945?v=4
 url: https://github.com/farnabaz
 ```
-
 
 ```yaml [larbish.yml]
 name: Baptiste Leproux
