--- a/docs/content/docs/3.files/3.json.md
+++ b/docs/content/docs/3.files/3.json.md
@@ -1,6 +1,6 @@
 ---
 title: JSON
-description: 'How to define, write and query JSON data.'
+description: How to define, write and query JSON data.
 ---
 
 ## Define Collection
@@ -32,7 +32,6 @@ Create authors files in `content/authors/` directory.
   "url": "https://github.com/farnabaz"
 }
 ```
-
 
 ```json [larbish.json]
 {
