--- a/docs/content/docs/3.utils/4.query-collection-search-sections.md
+++ b/docs/content/docs/3.utils/4.query-collection-search-sections.md
@@ -1,6 +1,7 @@
 ---
 title: queryCollectionSearchSections
-description: 'The queryCollectionSearchSections composable generates searchable sections from a collection for enhanced content discovery.'
+description: The queryCollectionSearchSections composable generates searchable
+  sections from a collection for enhanced content discovery.
 ---
 
 ## Type
@@ -31,7 +32,6 @@ Generate searchable sections from the specified collection.
   - `collection`: The key of the defined collection in `content.config.ts`.
   - `options`: (Optional) An object with the following properties:
     - `ignoredTags`: An array of tag names to ignore when generating sections. Default is an empty array.
-
 - Returns: A Promise that resolves to an array of searchable sections. Each section is an object with the following properties:
   - `id`: A unique identifier for the section.
   - `title`: The title of the section (usually the heading text).
@@ -43,7 +43,6 @@ Generate searchable sections from the specified collection.
 
 Here's an example of how to use `queryCollectionSearchSections` to create searchable sections from the 'docs' collection:
 
-
 ```vue [pages/[...slug\\].vue]
 <script>
 const { data: surround } = await useAsyncData('foo-surround', () => {
@@ -53,4 +52,3 @@ const { data: surround } = await useAsyncData('foo-surround', () => {
 })
 </script>
 ```
-
