--- a/docs/content/docs/7.studio/1.setup.md
+++ b/docs/content/docs/7.studio/1.setup.md
@@ -1,16 +1,20 @@
 ---
 title: Setup Nuxt Studio
 seo:
-  title: Introduction and setup of Nuxt Studio - the visual CMS platform of Nuxt Content
-  description: Studio is a the Git-based CMS platform for Nuxt Content websites, providing an intuitive interface to edit your Markdown, YAML and JSON files and publish your changes to GitHub.
+  title: Introduction and setup of Nuxt Studio - the visual CMS platform of Nuxt
+    Content
+  description: Studio is a the Git-based CMS platform for Nuxt Content websites,
+    providing an intuitive interface to edit your Markdown, YAML and JSON files
+    and publish your changes to GitHub.
 navigation:
   title: Setup
-description: Studio is the intuitive interface to edit Nuxt Content websites. Edit your Markdown, YAML and JSON files and publish your changes to GitHub.
+description: Studio is the intuitive interface to edit Nuxt Content websites.
+  Edit your Markdown, YAML and JSON files and publish your changes to GitHub.
 ---
 
 Studio is a Nuxt Content plugin you can activate to use the visual CMS platform.
 
-Content editors can benefit from a user-friendly interface including, among other things, editors to edit their `Markdown`, `YAML` or `JSON` files. 
+Content editors can benefit from a user-friendly interface including, among other things, editors to edit their `Markdown`, `YAML` or `JSON` files.
 
 Developers can customize the edition experience and provide tools to the editor who can focus on content without requiring any technical expertise.
 
@@ -62,7 +66,7 @@ Once deployed, you can ensure Studio has been activated by navigating to the `/_
 
 The `__studio.json` file is generated but you encounter a `Forbidden error: invalid property check` when setting your URL in the self-hosted section, follow these steps:
 
-1. Ensure the `gitInfo` field is set  and accurate in the `__studio.json` file:
+1. Ensure the `gitInfo` field is set and accurate in the `__studio.json` file:
 
 ```json [https://your-website.com/__studio.json]
 "gitInfo": {
