--- a/docs/content/docs/7.studio/3.content.md
+++ b/docs/content/docs/7.studio/3.content.md
@@ -2,13 +2,16 @@
 title: Edit your content
 navigation:
   title: Content editors
-description: Discover and select your favorite way to manage your content between the visual or the code editor.
-seo: 
+description: Discover and select your favorite way to manage your content
+  between the visual or the code editor.
+seo:
   title: Edit your Nuxt Content website with our editors
-  description: Overview of our different Studio CMS editors to manage your content and your medias. Choose between our visual editors and our code editor.
+  description: Overview of our different Studio CMS editors to manage your content
+    and your medias. Choose between our visual editors and our code editor.
 ---
 
 Nuxt Studio offers a versatile workspace for both developers and content writers, giving them the freedom to choose between our differents editors:
+
 - [Notion-like editor](#markdown-editor-markdown-files) for `Markdown` files
 - [Form editor](#form-editor-yaml-and-json-files) for `YAML` and `JSON` files
 - [Code editor](#code-editor) for any kind of files (for technical users only)
@@ -24,7 +27,6 @@ Each editor serves its own purpose. Some users are used to code edition, while o
 ![edit your website with a visual interface](/docs/studio/visual-markdown-editor.webp)
 
 This editor is heavily inspired by Notion, well known for its intuitive design and flexibility. Much like a standard text editor, this editor is designed to be familiar and easy to use. However, it stands out with its additional features that improve the writing experience:
-
 
 ### Front-matter
 
@@ -53,7 +55,6 @@ One of this editor standout features is its ability to integrate and customize a
 In other terms, a developer can create any kind of visually complex components and editors will be able to use them and focus on the content. An editor can also tweak the component properties, styles, and behavior to fit its specific requirements as long as the developer made it customizable.
 
 ::steps{level="4"}
-
 #### Create your component
 
 You can create Vue components and integrate them into Markdown. They just need to be located in the `/components/content` folder to be available.
@@ -99,7 +100,6 @@ defineProps({
 ::
 ```
 
-
 #### Edit them with our Studio editors
 
 The visual editor simplifies the component edition, allowing you to integrate and edit them directly in the visual editor. Non technical users can play with **slots** and **props** without any technical knowledge.
@@ -108,10 +108,9 @@ The visual editor simplifies the component edition, allowing you to integrate an
 
 All components in the `/components/content` folder are available in the editor. Studio users can type `/` anywhere while editing to access the list of available components.
 
-::tip{to="/docs/studio/debug"}
-Take a look at this section to validate your `Vue` component integration in the editor in local development.
-::
-
+  :::tip{to="/docs/studio/debug"}
+  Take a look at this section to validate your `Vue` component integration in the editor in local development.
+  :::
 ::
 
 ::tip{to="https://nuxt.studio/blog/visual-editor"}
@@ -137,6 +136,7 @@ Arrays are not yet handled but should be generated soon thanks to collections an
 Even though the two previous editors are dedicated to a specific file extension (`md` or `yaml`/`json`). The code editor can be used with any kind of file.
 
 It provides full control over your content, allowing you to write raw content directly:
+
 - [MDC](/docs/files/markdown) syntax for `Markdown` files
 - [JSON](/docs/files/json) or [YAML](/docs/files/yaml) syntax
 
