--- a/docs/content/docs/7.studio/5.config.md
+++ b/docs/content/docs/7.studio/5.config.md
@@ -1,6 +1,8 @@
 ---
-title: Tailor application configuration edition 
-description: Discover how to customize application config edition in Studio by providing schema. Ensure a smooth and structured content management experience.
+title: Tailor application configuration edition
+description: Discover how to customize application config edition in Studio by
+  providing schema. Ensure a smooth and structured content management
+  experience.
 navigation:
   title: App Config
 seo:
@@ -95,8 +97,6 @@ export default defineNuxtSchema({
 })
 ```
 
-
-
 ### Edit on Studio
 
 Once your schema is deployed. Any user can access the **Config** section and play with the generated form.
@@ -104,9 +104,9 @@ Once your schema is deployed. Any user can access the **Config** section and pla
 Any update in the form will be directly applied to the `app.config.ts` file. You can review those changes on the review page.
 
 ::code-group
-:::preview-card{label="Preview" icon="i-lucide-eye"}
-![app config UI on Studio](/docs/studio/home-data-studio-dark.webp)  
-:::
+  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  ![app config UI on Studio](/docs/studio/home-data-studio-dark.webp)
+  :::
 
 ```ts [nuxt.schema.ts]
 export default defineNuxtSchema({
@@ -149,7 +149,3 @@ Take a look at this section to validate your schema in local development.
 ::tip{to="https://github.com/nuxt-ui-pro/docs/blob/main/nuxt.schema.ts"}
 For a practical example, take a look at the schema we've developed for the UI Pro Docs starter.
 ::
-
-
-
-
