--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -3,7 +3,7 @@ title: Migration
 description: How to migrate from v2 to v3
 ---
 
-Nuxt Content v3 had been rebuilt from the ground up, resulting in a new library with enhanced capabilities. While we've redesigned concepts and components in a similar way as Content v2, breaking changes are inevitable. 
+Nuxt Content v3 had been rebuilt from the ground up, resulting in a new library with enhanced capabilities. While we've redesigned concepts and components in a similar way as Content v2, breaking changes are inevitable.
 
 Don't worry, you don't need to modify your content files, We made sure that Content v3 handles content in the same way as Content v2.
 
@@ -11,28 +11,26 @@ Don't worry, you don't need to modify your content files, We made sure that Cont
 
 Here is the list of breaking changes in Content v3:
 
-- `queryContent()`{lang=ts} API is replaced with new `queryCollection()`{lang=ts}
+- `queryContent()` API is replaced with new `queryCollection()`
   - New API is backed by SQL
   - New API search contents within the specific collection
-- `fetchContentNavigation()`{lang=ts} API is replaced with new `queryCollectionNavigation()`{lang=ts}
-- Surroundings now has its own separate API `queryCollectionItemSurroundings()`{lang=ts}
+- `fetchContentNavigation()` API is replaced with new `queryCollectionNavigation()`
+- Surroundings now has its own separate API `queryCollectionItemSurroundings()`
 - Document driven mode is fully dropped, meaning:
   - Markdown files will not convert to Nuxt pages automatically, you need to create pages, see [how](/docs/components/content-renderer#example)
-  - `useContent()`{lang=ts} composable is removed
+  - `useContent()` composable is removed
 - We simplified rendering components.
   - `<ContentDoc>`, `<ContentList>`, `<ContentNavigation>` and `<ContentQuery>` components are dropped in v3.
 - `_dir.yml` files are renamed to `.navigation.yml`
 - Multi source is dropped in favor of multi collection.
 - Document `._path` is now renamed to `.path`
-- `searchContent()`{lang=ts} is dropped in favor of new api `queryCollectionSearchSections`
+- `searchContent()` is dropped in favor of new api `queryCollectionSearchSections`
   - Full text search can easily be done using this API See [Full-Text Search Snippets](/docs/advanced/fulltext-search)
-- `useContentHelpers()`{lang=ts} is removed
-
+- `useContentHelpers()` is removed
 
 ## Implement Document Driven mode in v3
 
 Implementing document driven mode is Content v3 is quite easy. All you need is to create a catch-all page in Nuxt and fetch contents based on route path.
-
 
 ```vue [pages/[...slug\\].vue]
 <script lang="ts" setup>
@@ -67,7 +65,6 @@ const v2Query = await queryContent(route.path).findOne()
 const v3Query = await queryCollection('content').path(route.path).first()
 ```
 
-
 ```ts [Find contents with custom filter]
 // Content v2
 const v2Query = await queryContent()
@@ -79,8 +76,7 @@ const v3Query = await queryCollection('content')
   .first()
 ```
 
-
-## Convert `queryContent().findSurround()`{lang=ts}
+## Convert `queryContent().findSurround()`
 
 Surround now has it's own separate API.
 
