--- a/docs/content/docs/4.components/1.mdc-slot.md
+++ b/docs/content/docs/4.components/1.mdc-slot.md
@@ -1,6 +1,6 @@
 ---
-title: 'MDCSlot'
-description: 'The fastest way to inject Markdown into your Vue components.'
+title: MDCSlot
+description: The fastest way to inject Markdown into your Vue components.
 ---
 
 ::warning
@@ -109,10 +109,10 @@ When not using the `title` slot, the `h2` element will not be rendered.
 
 ## Props
 
-- `use`: The slot to bind on, you must provide a `use` via `$slots.{your_slot}`{lang=ts-type} in `<template>`.
-  - **Type:** Vue slot `Function`{lang=ts-type}
-  - **Example:** `$slots.default`{lang=ts-type}
+- `use`: The slot to bind on, you must provide a `use` via `$slots.{your_slot}` in `<template>`.
+  - **Type:** Vue slot `Function`
+  - **Example:** `$slots.default`
 - `unwrap`: Whether to unwrap the content or not. This is useful when you want to extract the content nested in native Markdown syntax. Each specified tag will get removed from AST.
-  - **Type:** `boolean`{lang=ts-type} or `string`{lang=ts-type}
-  - **Default:** `false`{lang=ts-type}
-  - **Example:** `'p'`{lang=ts-type} or `'ul li'`{lang=ts-type}
+  - **Type:** `boolean` or `string`
+  - **Default:** `false`
+  - **Example:** `'p'` or `'ul li'`
