feat(config): provide defineContentConfig utility

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -40,14 +40,16 @@ export default defineNuxtConfig({
 Create a `content.config.ts` file in your project root directory:
 
 ```ts [content.config.ts]
-import { defineCollection } from '@nuxt/content'
+import { defineContentConfig, defineCollection } from '@nuxt/content'
 
-export const collections = {
-  content: defineCollection({
-    type: 'page',
-    source: '**/*.md'
-  })
-}
+export default defineContentConfig({
+  collections: {
+    content: defineCollection({
+      type: 'page',
+      source: '**/*.md'
+    })
+  }
+})
 ```
 
 This configuration creates a default `content` collection that processes all Markdown files located in the `content` folder of your project. You can customize the collection settings based on your needs.
