--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -27,6 +27,9 @@ Here is the list of breaking changes in Content v3:
 - `searchContent()` is dropped in favor of new api `queryCollectionSearchSections`
   - Full text search can easily be done using this API See [Full-Text Search Snippets](/docs/advanced/fulltext-search)
 - `useContentHelpers()` is removed
+- We consolidated the `ProsePre`, `ProseCode`, and `ProseCodeInline` components
+  - `ProseCodeInline` is now `ProseCode`
+  - `ProseCode` is now `ProsePre`
 
 ## Implement Document Driven mode in v3
 
@@ -97,3 +100,15 @@ const v3Surround = await queryCollectionItemSurroundings(
   }
 )
 ```
+
+## Consolidate `ProsePre`, `ProseCode`, and `ProseCodeInline` components
+
+Many `ProsePre` components are thin wrappers around the `ProseCode` component. We've consolidated these three components into two components. There is now no difference between `ProsePre` and multi-line code blocks.
+
+1. MDC will now map and parse single backticks ``` as `ProseCode` instead of `ProseCodeInline`.
+2. Block code examples (starting with three backticks) will now be mapped to the `ProsePre` component.
+
+Suggested Changes
+1. Your _current_ `ProseCode` logic should be moved to `ProsePre`
+2. Rename your `ProseCodeInline` component to `ProseCode`
+
